[tool.poetry]
name = "stepstone-scraper"
version = "0.1.0"
description = "Scraper to scrape job listings from stepstone.de"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
webdriver-manager = "^4.0.2"
selenium = "^4.26.1"
pyppeteer = "^2.0.0"
aiohttp = "^3.11.10"
playwright = "1.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
